[metadata]
name = sherry
author = Tyler Lubeck
author-email = tyler@tylerlubeck.com
summary = A library for creating bots
description-file = README.md
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    sherry
[entry_points]
console_scripts = 
    sherry = sherry.cli:main
